--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SOURCE_FILES
         jpegenc/jpegenc/model/Image.cpp
         jpegenc/jpegenc/model/Image.hpp
+        jpegenc/jpegenc/model/Channel.cpp
+        jpegenc/jpegenc/model/Channel.hpp
     jpegenc/jpegenc/main.cpp
         jpegenc/jpegenc/loader/PPMLoader.cpp
         jpegenc/jpegenc/loader/PPMLoader.hpp
