Add first version of bitstream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 file(GLOB_RECURSE SOURCE_FILES jpegenc/jpegenc/*)
 
-add_executable(jpeg_encoder ${SOURCE_FILES} jpegenc/jpegenc/bitstream/BitstreamMarv.cpp jpegenc/jpegenc/bitstream/BitstreamMarv.hpp)
+add_executable(jpeg_encoder ${SOURCE_FILES} jpegenc/jpegenc/bitstream/BitstreamMarv.cpp jpegenc/jpegenc/bitstream/BitstreamMarv.hpp jpegenc/jpegenc/bitstream/BitstreamMarcel.cpp jpegenc/jpegenc/bitstream/BitstreamMarcel.hpp)
